@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1910 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1911 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -382,3 +382,5 @@ Changes from NetBSD 6.0 to NetBSD 7.0:
 	ptyfs: Allow multiple mounts and support proper device visibility
 	     in chroots (Ilya Zykov) [christos 20140404]
 	i386: Switched to GCC 4.8.  [christos 20140404]
+	mcp23s17gpio: Add Microchip MCP23S17 16-bit GPIO chip driver.
+		e.g. Rasberry Pi interface boards [kardel 20140406]
